charts/supabase/data-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-ingress
  namespace: supabase
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Forwarded "proto=https";
      proxy_set_header X-Forwarded-Proto "https";
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  #   nginx.ingress.kubernetes.io/auth-url: |-
  #       http://authentik-server.auth.svc.cluster.local/outpost.goauthentik.io/auth/nginx
  #   # If you're using domain-level auth, use the authentication URL instead of the application URL
  #   nginx.ingress.kubernetes.io/auth-signin: |-
  #       https://auth.r.land/outpost.goauthentik.io/start?rd=$escaped_request_uri
  #   nginx.ingress.kubernetes.io/auth-response-headers: |-
  #       Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
  #   nginx.ingress.kubernetes.io/auth-snippet: |
  #       proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - data.r.land
      secretName: data-land
  rules:
    - host: data.r.land
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: supabase-supabase-kong
                port:
                  number: 8000
